--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.vesalainen</groupId>
         <artifactId>parent</artifactId>
-        <version>1.0.8</version>
+        <version>1.0.9</version>
     </parent>    
     <modelVersion>4.0.0</modelVersion>
     <packaging>war</packaging>
@@ -84,6 +84,10 @@
         <dependency>
             <groupId>org.vesalainen</groupId>
             <artifactId>util</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.vesalainen</groupId>
+            <artifactId>web-util</artifactId>
         </dependency>
     </dependencies>
       
